# ksweb

./: .codecov.yml  .gitignore  .hgignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  NOTICE.html  NOTICE.md  README.md  docker-compose.yml  install  nose  pyproject.toml
.github/: dependabot.yml
ansible/: ansible.cfg  deploy-staging.yml  deploy-test.retry  deploy-test.yml  inventory  passwd.yml  production.yml
ansible/group_vars/: all  stagingservers  testservers
ksweb/: .travis.yml  MANIFEST.in  README.txt  development.ini  fabfile.py  serve  setup.cfg  setup.py  ssl.ini  staging-axant.ini  staging.ini  test.ini
ksweb/ksweb/: __init__.py
ksweb/ksweb/config/: app_cfg.py  environment.py  evolutions.py  middleware.py  registration_hooks.py
ksweb/ksweb/controllers/: __init__.py  category.py  controller.py.template  document.py  error.py  form.py  gnosino.py  output.py  output_plus.py  partials.py  precondition.py  qa.py  questionary.py  resolve.py  root.py  workspace.py
ksweb/ksweb/i18n/: it  ksweb.pot
ksweb/ksweb/lib/: __init__.py  base.py  forms.py  helpers.py  predicates.py  utils.py  validator.py
ksweb/ksweb/model/: __init__.py  auth.py  category.py  document.py  mapped_entity.py  model.py.template  output.py  precondition.py  qa.py  questionary.py  session.py  workspace.py
ksweb/ksweb/templates/: index.xhtml  legal.xhtml  login.xhtml  master.html  master.xhtml  master_without_sidebar.xhtml  privacy.xhtml  source.xhtml  start.xhtml  terms.xhtml  welcome.xhtml
ksweb/ksweb/tests/: __init__.py
ksweb/ssl/: certfile  keyfile
(+112 files in other folders)
