[tool.poetry]
name = "ksweb"
version = "1.0.0"
description = "Knowledge Shaper. The editor to share your knowledge."
authors = ["Puria Nafisi Azizi <puria@dyne.org>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
